--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           host: ${{ secrets.MPT_HOST }}
           username: ${{ secrets.MPT_USERNAME }}
-          password: ${{ secrets.MPT_PRIVATE_KEY }}
+          key: ${{ secrets.MPT_PRIVATE_KEY }}
           # port: ${{ secrets.PORT }} # default : 22
           script: |
             cd ${{ secrets.MPT_WEB_PATH }} && git pull
