ec2 프리티어 메모리 부족 문제 해결

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,10 @@ jobs:
           key: ${{ secrets.MPT_PRIVATE_KEY }}
           # port: ${{ secrets.PORT }} # default : 22
           script: |
+            sudo docker stop $(sudo docker ps -aq)
             cd ${{ secrets.MPT_WEB_PATH }} && git pull
             source ~/.nvm/nvm.sh
             nvm use 17.0.0
             npm install
+            npm run build
+            sudo docker start $(sudo docker ps -aq)
